k8s/prod/atlantis/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: atlantis
  labels:
    name: atlantis
