k8s/prod/atlantis/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis
  namespace: atlantis
spec:
  defaultBackend:
    service:
      name: atlantis
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - atlantis
