k8s/prod/atlantis/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: atlantis-redirect
  namespace: atlantis
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`atlantis.marcyoung.us`)
      middlewares:
        - name: httpredirectscheme
          namespace: traefik
      services:
        - name: atlantis
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: atlantis
  namespace: atlantis
  annotations:
    kubernetes.io/ingress.class: traefik
    certmanager.k8s.io/cluster-issuer: letsencrypt-atlantis-prod
    certmanager.k8s.io/acme-challenge-type: dns01
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`atlantis.marcyoung.us`) && !PathPrefix(`/events`)
      services:
        - name: atlantis
          port: 80
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
    - kind: Rule
      match: Host(`atlantis.marcyoung.us`) && PathPrefix(`/events`)
      services:
        - name: atlantis
          port: 80
  tls:
    secretName: atlantis-cert
